# tmpl-dcr-runtime

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  dune-project  runtime.d.ts  tmpl_dcr.opam
examples/: 0  0.tdcr  0.tmpldcr  1.tdcr  README.md  demo.tdcr  fact.tdcr  pokemon.tdcr  request-approval  request-approval.tdcr  robot-planting.tdcr
examples/0-hello/: README.md
examples/1-events/: README.md  main.tdcr
examples/2-data-types/: README.md
examples/3-marking/: README.md
examples/4-control-relations/: README.md
interpreter/: .gitignore  .ocamlformat  Dockerfile  Makefile  demo  demo.tape  dune-project  dune-workspace  tmpl_dcr.opam
interpreter/src/: README.md
interpreter/src/cli/: README.md  dune  errors.ml  errors.mli  exec.ml  main.ml  main.mli  options.ml  runtime.ml
interpreter/src/cli/repl/: README.md  debug.ml  dune  errors.ml  exec.ml  execute.ml  help.ml  main.ml  quit.ml  quit.mli  rollback.ml  root.ml  state.ml  view.ml
interpreter/src/common/: README.md  bktree.mli  checkable.ml  checkable.mli  dune  env.ml  env.mli  graph.ml  monads.ml  monads.mli  printing.ml
interpreter/src/core/: README.md  api.ml  api.mli  dune  errors.ml
interpreter/src/core/ast/: README.md  dune  error.ml  error.mli  syntax.ml  syntax.mli  unparser.ml
interpreter/src/core/ast/unparser/: README.md  colorized.ml  dot.ml  dune  helper.ml  plain.ml
interpreter/src/core/dcr/: README.md  dune  errors.ml  errors.mli  evaluation.ml  evaluation.mli  helper.ml  instantiation.ml  instantiation.mli  runtime.ml  transition.ml  transition.mli
interpreter/src/core/parsing/: README.md  dune  errors.ml  errors.mli  lex_and_parse.ml  lex_and_parse.mli  lexer.mll  parser.mly
interpreter/src/core/typing/: README.md  dune  errors.ml  errors.mli  helper.ml  typechecking.ml  typechecking.mli
interpreter/src/misc/: bktree.ml  env.ml  env.mli  input.ml  monads.ml  monitor.ml  printing.ml
interpreter/src/repl/: debug.ml  debug.mli  errors.ml  errors.mli  execute.ml  execute.mli  export.ml  export.mli  help.ml  help.mli  main.ml  main.mli  quit.ml  quit.mli  rollback.ml  rollback.mli  state.ml  view.ml  view.mli
interpreter/src/templating/: api.ml  api.mli  battery_tests.ml  cmds.ml  dune  errors.ml  evaluation.ml  instantiation.ml  lex_and_parse.ml  lex_and_parse.mli  lexer.mll  parser.mly  program_helper.ml  runtime.ml  syntax.ml  typechecking.ml  typechecking.mli  unparser.ml
interpreter/test/: README.md  builder.ml  common.ml  dune  test_core.ml  test_tdcr.ml  test_templating.ml  test_typechecking.ml
interpreter/test/files/: 1.tdcr  2.tdcr  4.tdcr  6.tdcr  7.tdcr
interpreter/test/files/annotations/: -1.tdcr  0.tdcr  1.tdcr  2.tdcr  3.tdcr  4.tdcr  5.tdcr  6.tdcr  7.tdcr  8.tdcr
interpreter/test/files/error/: 0.tdcr  1.tdcr  2.tdcr  README.md
interpreter/test/files/exported-events/: 0.tdcr  1.tdcr  2.tdcr  3.tdcr  4.tdcr  5.tdcr  6.tdcr  7.tdcr  8.tdcr
interpreter/test/files/runtime/: 0.tdcr  1.tdcr  2.tdcr  3.tdcr  4.tdcr
interpreter/test/files/simple/: 0.tdcr  2.tdcr  3.tdcr  4.tdcr
interpreter/test/files/typechecker/: 0.tdcr  1.tdcr  10.tdcr  11.tdcr  2.tdcr  3.tdcr  4.tdcr  5.tdcr  6.tdcr  7.tdcr  8.tdcr  9.tdcr
lib/: dune
server/: package-lock.json  package.json  tsconfig.json
test/: common.ml  dune  test_templating.ml
tutorial/: README.md
(+71 files in other folders)
