(lang dune 3.14)

(name tmpl_dcr)

(generate_opam_files true)

(source
 (github DCR-NOVALINCS/tmpl-dcr-runtime))

(authors "bfibraga")

(maintainers "bfibraga")

(license
 "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License")

(documentation https://url/to/documentation)

(using menhir 3.0)

(package
 (name tmpl_dcr)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune
  odoc
  (menhir
   (>= 3.0))
  js_of_ocaml)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
