(lang dune 3.14)

(name tmpl_dcr)

(version 0.1)

(generate_opam_files true)

(source
 (github DCR-NOVALINCS/tmpl-dcr-runtime))

(license "MIT")

(documentation https://url/to/documentation)

(using menhir 3.0)

(package
 (name tmpl_dcr)
 (synopsis "An implementation of a interpreter for Templates in DCR Graphs")
 (description
  "An implementation of a interpreter and runtime execution of Templates in Dynamic Condition Response Graphs (DCR Graphs).")
 (depends
  ocaml
  dune
  odoc
  (menhir
   (>= 3.0))
  yojson
  cmdliner
  (alcotest :with-test))
 (tags
  (dcr templates interpreter runtime tdcr)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
